  https://sourceforge.net/support/tracker.php?aid=1658440
  Thank you Shirish Kulkarni
  
- Added support for Sybase dialect
  Support for Sybase should be considered beta at the moment.
  It has not received a great deal of testing yet.
  https://sourceforge.net/support/tracker.php?aid=1662010
  Thank you Alex Soto
  
- List of unapplied patches displayed prior to patching
  Mike Hardy
  https://sourceforge.net/support/tracker.php?aid=1658446
  
- Read-only mode implemented, now you can specify that the
  system should be read-only, and it will do everything
  *except* actually apply the patches. If the level isn't correct
  it will throw an exception, you can use this to enforce consistency
  while making sure that systems aren't patched automatically
  (useful in production configurations)
  Mike Hardy
  https://sourceforge.net/support/tracker.php?aid=1658445
  
- Added an example project that demonstrates how most of the AutoPatch
  features work, including the distributed feature
  Thank you Alex Soto
  
- Found and fixed improper database connection usage
  https://sourceforge.net/support/tracker.php?aid=1665584
  Thank you Alex Soto
  
- Implemented serial application of same patch across multiple
  databases, and extended documentation and example to cover this.
  This is referred to as "multi-node" patch application in the code and docs
  Mike Hardy
  https://sourceforge.net/support/tracker.php?aid=1661985
  
- Added integration tests utilizing HSQLDB to further automate correctness
  Mike Hardy

- Implemented forcible table unlocking (useful if JVMs crash)
  Mike Hardy
  https://sourceforge.net/support/tracker.php?aid=1658547
  
- Big Checkstyle cleanup

- Added XML file loader (useful to import DbUnit files)
  Alex Soto
  
- More friendly distribution packaging - a zip file, 
  and unpacks into a sub-directory instead of the current directory
  Mike Hardy
  

Version 1.0.0
-------------
Versions prior to 1.0.0 did not maintain a changelog.